# LLM-Engineering-Course

./: .gitignore  main.py  pyproject.toml  test.ipynb
Week1/: day1.ipynb  day2.ipynb  day2_project.ipynb  day4.ipynb  day5.ipynb  scraper.py  scraper_with_selenium.ipynb  twitter_scraper.py  week1_exercise.ipynb
Week2/: day1.ipynb  day1_exercise.ipynb  day2.ipynb  day2_exercise.ipynb  day3.ipynb  day3_exercise.ipynb  day4.ipynb  prices.db
