[project]
name = "llm-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google>=3.0.0",
    "gradio>=6.11.0",
    "langchain-openai>=1.1.10",
    "litellm>=1.82.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "tiktoken>=0.12.0",
    "tzdata>=2025.3",
    "webdriver-manager>=4.0.2",
]
